--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.app {
+  display: flex;  
+}
+
+.news-feed {
+  background-color: red;
+}
+
+.currency-converter {
+  background-color: blue;
+}
+
+.exchange-rate {
+  background-color: teal;
+}
