--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,61 @@ code {
 }
 
 .app {
-  display: flex;  
+  margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.container {
+  display: flex;
 }
 
 .news-feed {
-  background-color: red;
+  background-color: rgb(204, 204, 231);
+  padding: 10px;
+  margin: 5px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  text-align: center;
 }
 
 .currency-converter {
-  background-color: blue;
+  background-color: rgb( 230, 223, 211);
+  padding: 10px;
+  margin: 5px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .exchange-rate {
-  background-color: teal;
+  background-color: rgb(221, 230, 221);
+  padding: 20px;
+  margin-top: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  border-radius: 10px;
+}
+
+.input-box {
+  background-color: rgb(218, 227, 239);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+
+button {
+  border: none;
+  float: right;
+  margin: 2px;
+}
+
+button:hover {
+  background-color: coral;
+}
+
+input, select {
+  border: none;
 }
